# msi-ec

./: .gitignore  Cargo.toml
dbus/system.d/: by.toshibam.MsiEc.conf
dbus/systemd/: MsiEc.service
msi-ec/: Cargo.toml
msi-ec-client/: Cargo.toml
msi-ec-client/src/: lib.rs
msi-ec-types/: Cargo.toml
msi-ec-types/src/: lib.rs
msi-ec/src/: lib.rs  main.rs  msi.rs  service.rs
script/: install.sh  uninstall.sh
