[package]
name = "msi-ec-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, optional = true }
zbus = { workspace = true, optional = true }

strum = { version = "0.27.2", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
zbus = ["dep:zbus"]
strum = ["dep:strum"]
