[package]
name = "msi-ec"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
zbus.workspace = true

msi-ec-types = { workspace = true, features = ["zbus", "serde"] }

anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs"] }
serde_plain = "1.0.2"
